[gd_scene load_steps=11 format=2]

[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://framework/node_modules/squasher/Squasher.tscn" type="PackedScene" id=2]
[ext_resource path="res://framework/node_modules/audio_players/pitch_ramp_audio_player/PitchRampAudioPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/bomb_03.wav" type="AudioStream" id=5]
[ext_resource path="res://framework/resources/shapes/8/circle_8.png" type="Texture2D" id=6]
[ext_resource path="res://game/bomb_01.wav" type="AudioStream" id=7]
[ext_resource path="res://game/bomb_02.wav" type="AudioStream" id=8]
[ext_resource path="res://game/splitting_grenade.gd" type="Script" id=9]
[ext_resource path="res://game/land_01.wav" type="AudioStream" id=10]
[ext_resource path="res://game/land_02.wav" type="AudioStream" id=11]

[node name="SplittingGrenade" type="Node2D"]
script = ExtResource( 9 )

[node name="ShadowContainer" type="Node2D" parent="."]
position = Vector2( 2, -3 )

[node name="Shadow" type="Sprite2D" parent="ShadowContainer"]
modulate = Color( 0, 0, 0, 0.490196 )
texture = ExtResource( 6 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.968627, 0.462745, 0.133333, 1 )
z_index = 5
texture = ExtResource( 6 )
offset = Vector2( 0, -4 )

[node name="Squasher" parent="." instance=ExtResource( 2 )]
target = NodePath("../Sprite2D")

[node name="BounceSound" parent="." instance=ExtResource( 3 )]
pitch_ramp = 0.25
timed = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BounceSound/DetachableAudioPlayer/RandomAudioPlayer" index="0"]
stream = ExtResource( 10 )
bus = "GrenadeBounce"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="BounceSound/DetachableAudioPlayer/RandomAudioPlayer" index="1"]
stream = ExtResource( 11 )
bus = "GrenadeBounce"

[node name="ExplodeSound" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 7 )
bus = "Game"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 8 )
bus = "Game"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 5 )
bus = "Game"

[editable path="BounceSound"]
[editable path="BounceSound/DetachableAudioPlayer"]
[editable path="BounceSound/DetachableAudioPlayer/RandomAudioPlayer"]
[editable path="ExplodeSound"]
[editable path="ExplodeSound/RandomAudioPlayer"]
